# twitter-fast-api

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  alembic.ini  analytics.Dockerfile  api_test.http  docker-compose-dev.yml  docker-compose-test.yml  gunicorn.conf.py  http-client.env.json  makefile  manage.py  pyproject.toml  requirements.txt
analytics/: Dockerfile  Pipfile  alembic.ini  client.py  main.py  post_views_pb2.pyi  post_views_pb2_grpc.py  requirements.txt  service.py
analytics/api/: main.py  models.py  views.py
analytics/database/: configs.py  models.py
analytics/service/: __init__.py  grpc.py  post_views_pb2_grpc.py
api/: main.py  routes.py
api/bookmarks/: models.py
api/core/: config.py  middleware.py  pagination.py
api/database/: base_models.py
api/engagements/: models.py  services.py  tasks.py  views.py
api/likes/: models.py  views.py
api/posts/: depends.py  models.py  services.py  views.py
api/users/: auth.py  depends.py  models.py  views.py
app/: main.py  pyproject.toml
app/core/: config.py  logger.py  middleware.py  pagination.py
app/database/: config.py
app/db/: config.py
app/models/: __init__.py  comment.py  game.py  likes.py  posts.py  users.py
app/routes/: game.py  users.py
app/sample/: models.py  routes.py
migrations/models/: 0_20240525140048_init.py  0_20240526215105_init.py  0_20240528174358_init.py  1_20240525213554_update.py  1_20240527175445_update.py  1_20240528211932_update.py
src/: main.py  routes.py
tests/: configs.py  conftest.py  factories.py
twitter_api/: main.py  routes.py
(+77 files in other folders)
